docs: a11y + alignment fix

--- a/src/_sass/layout.scss
+++ b/src/_sass/layout.scss
@@ -970,8 +970,11 @@ button.svgButton, button.brandButton {
 }
 
 #scrollToTop {
+  display: block;
+  float: left;
+
   @include docs-mobile {
-    display: block;
+    float: none;
     margin: 0 auto;
     text-align: center;
   }
